--- a/references.bib
+++ b/references.bib
@@ -65,6 +65,17 @@
   url		= {https://www.youtube.com/watch?v=u8B3j8rqYMw}
 }
 
+@article{alsallakh2013,
+  title={Radial sets: Interactive visual analysis of large overlapping sets},
+  author={Alsallakh, Bilal and Aigner, Wolfgang and Miksch, Silvia and Hauser, Helwig},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={19},
+  number={12},
+  pages={2496--2505},
+  year={2013},
+  publisher={IEEE}
+}
+
 @Article{	  alsallakh2014,
   title		= {Visualizing sets and set-typed data: State-of-the-art and
 		  future challenges},
@@ -2762,3 +2773,42 @@
 	note = {[Online; accessed 28. Nov. 2024]},
 	url = {https://olympics.com/en/paris-2024/results/sport-climbing/women-s-boulder-and-lead/sfnl000200--}
 }
+
+@book{cairo2016,
+  title={The truthful art: Data, charts, and maps for communication},
+  author={Cairo, Alberto},
+  year={2016},
+  publisher={New Riders}
+}
+
+@article{lisnic2024,
+  title={Visualization Guardrails: Designing Interventions Against Cherry-Picking in Interactive Data Explorers},
+  year = {2024},
+  author={Lisnic, Maxim and Cutler, Zach and Kogan, Marina and Lex, Alexander},
+  publisher={OSF},
+  note = {[Online; accessed 29. Nov. 2024]},
+	url = {https://osf.io/preprints/osf/4j9nr}
+}
+
+@article{kerr1998,
+  title={HARKing: Hypothesizing after the results are known},
+  author={Kerr, Norbert L},
+  journal={Personality and social psychology review},
+  volume={2},
+  number={3},
+  pages={196--217},
+  year={1998},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{head2015,
+  title={The extent and consequences of p-hacking in science},
+  author={Head, Megan L and Holman, Luke and Lanfear, Rob and Kahn, Andrew T and Jennions, Michael D},
+  journal={PLoS biology},
+  volume={13},
+  number={3},
+  pages={e1002106},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
