--- a/problems.Rmd
+++ b/problems.Rmd
@@ -70,9 +70,9 @@ Clearly then, we can dismiss the first two data-hiding issues - cherry picking a
 
 An overwhelmingly common practice in data visualization is to use geometric objects to represent distinct subsets of data. That is, in most common types of plots, each point, bar, line, or polygon typically represents a unique set of data points (rows of the data), with no overlap between objects within the same graphical layer. Despite being so common to border on a rule, this practice is often overlooked.
 
-Yet, is this practice universal? If it really were a rule, it would be vulnerable to a single counter-example, and indeed, such counter do exists. For example, certain visualizations of set-like data "double up" the contribution of data subsets, such that one subset of the data may be reflected in multiple objects [see e.g. @alsallakh2013; @alsallakh2014]. However, these types of visualizations are the exception rather than the norm.   
+The practice of visualizing disjoint subsets of the data is not universal and counterexamples do exist. For instance, certain visualizations of set-typed data "double up" the contribution of data subsets, such that the same subset of the data may appear in multiple objects [see e.g. @alsallakh2013; @alsallakh2014; @conway2017; @lex2014]. However, these types of visualizations are the exception rather than the norm.   
 
-So where does this unconscious "law" of using objects to represent disjoint parts of the data come from? I would like to argue that it is be rooted in the fundamental purpose of data visualization: comparison [@tufte2001; @tukey1993]. When we visualize, we draw our graphics with the ultimate goal of being able to compare our data along a set of visual channels, such as position, length, size, or colour [@bertin1983; @wilkinson2012; @franconeri2021; @wilke2019]. This mirrors the comparisons we make in the real world, where we compare physical objects along their respective dimensions or attributes.
+So where does this unconscious "law" of representing disjoint parts of the data come from? I would like to argue that it is be rooted in the fundamental purpose of data visualization: comparison [@tufte2001; @tukey1993]. When we visualize, we draw our graphics with the ultimate goal of being able to compare our data along a set of visual channels, such as position, length, size, or colour [@bertin1983; @wilkinson2012; @franconeri2021; @wilke2019]. This mirrors the comparisons we make in the real world, where we compare objects along their respective physical dimensions or attributes.
 
 With disjoint parts, there is a natural correspondence or bijection between the subsets of the data and their visual representation, see Figure \@ref(fig:geoms-bijection). Specifically, if our objects represents disjoint parts of the data, the function mapping the data parts to the geometric objects is invertible: we can pick an object, identify the corresponding subset of cases, and then use this subset to get back the original object. In plots where the objects do not represent disjoint subsets of the data, this correspondence is broken: if we identify cases corresponding to a single object, there is no simple way to map these cases back to the original object.
 
