--- a/references.bib
+++ b/references.bib
@@ -2812,3 +2812,121 @@
   publisher={Public Library of Science}
 }
 
+@article{conway2017,
+  title={UpSetR: an R package for the visualization of intersecting sets and their properties},
+  author={Conway, Jake R and Lex, Alexander and Gehlenborg, Nils},
+  journal={Bioinformatics},
+  volume={33},
+  number={18},
+  pages={2938--2940},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@article{lex2014,
+  title={UpSet: visualization of intersecting sets},
+  author={Lex, Alexander and Gehlenborg, Nils and Strobelt, Hendrik and Vuillemot, Romain and Pfister, Hanspeter},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={20},
+  number={12},
+  pages={1983--1992},
+  year={2014},
+  publisher={IEEE}
+}
+
+@article{mansfield2020,
+  title={Perpendicular lines and diagonal triples in Old Babylonian Surveying},
+  author={Mansfield, Daniel F},
+  journal={Journal of Cuneiform Studies},
+  volume={72},
+  number={1},
+  pages={87--99},
+  year={2020},
+  publisher={The University of Chicago Press Chicago, IL}
+}
+
+@misc{mansfield2024,
+	author = {Mansfield, Daniel F},
+	year = {2018},
+	journal = {Wikimedia Commons},
+	month = jun,
+	note = {[Online; accessed 30. Nov. 2024]},
+	url = {https://commons.wikimedia.org/wiki/File:Si427o.jpg}
+}
+
+@article{kvasz2006,
+  title={The history of algebra and the development of the form of its language},
+  author={Kvasz, Ladislav},
+  journal={Philosophia Mathematica},
+  volume={14},
+  number={3},
+  pages={287--317},
+  year={2006},
+  publisher={OUP}
+}
+
+@misc{etymonline2024,
+	title = {Statistics},
+	author = {{Online Etymology Dictionary}},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 1. Dec. 2024]},
+	url = {https://www.etymonline.com/word/statistics}
+}
+
+@article{beniger1978,
+  title={Quantitative graphics in statistics: A brief history},
+  author={Beniger, James R and Robyn, Dorothy L},
+  journal={The American Statistician},
+  volume={32},
+  number={1},
+  pages={1--11},
+  year={1978},
+  publisher={Taylor \& Francis}
+}
+
+@article{freedman1999,
+  title={From Association to Causation: Some Remarks on the History of Statistics},
+  author={Freedman, David},
+  journal={Statistical Science},
+  volume={14},
+  number={3},
+  pages={243--258},
+  year={1999}
+}
+
+@article{brasseur2005,
+  title={Florence Nightingale's visual rhetoric in the rose diagrams},
+  author={Brasseur, Lee},
+  journal={Technical Communication Quarterly},
+  volume={14},
+  number={2},
+  pages={161--182},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@article{stigler1996,
+  title={The history of statistics in 1933},
+  author={Stigler, Stephen M},
+  journal={Statistical Science},
+  volume={11},
+  number={3},
+  pages={244--252},
+  year={1996},
+  publisher={JSTOR}
+}
+
+@misc{fienberg1992,
+  title={A brief history of statistics in three and one-half chapters: A review essay},
+  author={Fienberg, Stephen E},
+  year={1992},
+  publisher={JSTOR}
+}
+
+@book{clayton2021,
+  title={Bernoulli's fallacy: Statistical illogic and the crisis of modern science},
+  author={Clayton, Aubrey},
+  year={2021},
+  publisher={Columbia University Press}
+}
